:memo: :fix: fix grammar rule

--- a/src/functional_expressions_top_down.ipynb
+++ b/src/functional_expressions_top_down.ipynb
@@ -42,7 +42,7 @@
     "### Grammar:\n",
     "\n",
     "```\n",
-    "Def -> ID Tipo Resto\n",
+    "Def -> Tipo ID Resto\n",
     "Resto -> ‘,’ Tipo ID Resto\n",
     "Resto -> epsilon\n",
     "Tipo -> INT\n",
@@ -132,11 +132,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sly import Lexer"
+    "from sly import Lexer\n",
+    "\n",
+    "tabla = {}\n",
+    "ta = None\n",
+    "ind = 0\n",
+    "tokens = None\n",
+    "tokenlist = None"
    ]
   },
   {
@@ -168,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +190,18 @@
     "    data = 'int a, int b, int c'\n",
     "    lexer = CalcLexer()\n",
     "    for token in lexer.tokenize(data):\n",
-    "        print(\"type = '{}', value = {}\".format(token.type, token.value))\n"
+    "        print(\"type = '{}', value = {}\".format(token.type, token.value))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def definition():\n",
+    "    global ta, tokens\n",
+    "    if ta.type =="
    ]
   }
  ]
