:bug: fix tipo follow set

--- a/src/functional_expressions_top_down.ipynb
+++ b/src/functional_expressions_top_down.ipynb
@@ -93,7 +93,7 @@
     "### Follow set\n",
     "- Follow(Def) = {`$`}\n",
     "- Follow(Resto) = Follow(Resto) U Follow(Def) = {`$`}\n",
-    "- Follow(Tipo) = {`ID`} U First(Resto) - epsilon U Follow(Def) = {`','` `$`}"
+    "- Follow(Tipo) = {`ID`}"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -136,18 +136,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sly import Lexer\n",
-    "\n",
-    "tabla = {}\n",
-    "ta = None\n",
-    "ind = 0\n",
-    "tokens = None\n",
-    "tokenlist = None"
+    "from sly import Lexer\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +163,30 @@
     "\n",
     "    def error(self, t):\n",
     "        print('Illegal character {}'.format(t.value[0]))\n",
-    "        self.index += 1\n"
+    "        self.index += 1\n",
+    "\n",
+    "tabla = {}\n",
+    "ta = None\n",
+    "ind = 0\n",
+    "tokens = None\n",
+    "tokenlist = None\n",
+    "\n",
+    "class Node():\n",
+    "    def write():\n",
+    "        pass\n",
+    "\n",
+    "class IntNode(Node):\n",
+    "    def write():\n",
+    "        return \"int\"\n",
+    "\n",
+    "class FloatNode(Node):\n",
+    "    def write():\n",
+    "        return \"float\"\n",
+    "\n",
+    "class CharNode(Node):\n",
+    "    def write():\n",
+    "        return \"char\"\n",
+    "    "
    ]
   },
   {
