:bug: fix def first set

--- a/src/functional_expressions_top_down.ipynb
+++ b/src/functional_expressions_top_down.ipynb
@@ -86,7 +86,7 @@
    "source": [
     "### First set\n",
     "\n",
-    "- First(Def) = {ID}\n",
+    "- First(Def) = First(Tipo) = {INT, CHAR, FLOAT}\n",
     "- First(Resto) = {`','`, epsilon}\n",
     "- First(Tipo) = {INT, CHAR, FLOAT}\n",
     "\n",
